--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/profile.ico" type="image/x-icon">
     <title>Hds Prod - Developer </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <style>
-    </style>
 </head>
 <body>
-    <div>
-        <img src="assets/img/profile.png" alt="Coming Soon" class="img">
+    <div class="page-content">
+        <div class="container">
+            <div class="row">
+                <div class="text-center">
+                    <div class="profile-img">
+                        <!-- <img src="assets/img/profile.png" alt="Coming Soon" class="img"> -->
+                        <img src="assets/img/profile-rounded-dg.png" alt="Coming Soon" class="img">
+                    </div>
+                </div>
+                <div class="text-center">
+                    <h1>Hedwin Díaz</h1>
+                    <h3>Ing. de Sistemas | Productor Musical | Desarrollador .NET | JAVA | PHP </h3>
+                </div>
+            </div>
+        </div>
     </div>
-    <h1>HDS</h1>
 </body>
 </html>
