add projects details - portfolio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Hedwin Diaz - Developer - Music Producer</title>
+  <title>Hedwin Diaz | Developer | Music Producer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -113,7 +113,7 @@
               <li class="nav-item">
                 <a class="nav-link active show" data-bs-toggle="tab" href="#sapcad">
                   <h4>SAPCAD</h4>
-                  <p>Sitema de Reconocimiento Facial como Control de Asistencia de Empleados. </p>
+                  <p>Sitema de Reconocimiento Facial en tiempo real como Control de Asistencia de Empleados. </p>
                 </a>
               </li>
               <li class="nav-item mt-2">
@@ -140,28 +140,28 @@
             <div class="tab-content">
               <div class="tab-pane active show" id="sapcad">
                 <figure>
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                    <img src="assets/img/mk-sapcad-reg-emp.png" alt="" class="img-fluid">
+                  <a href="assets/img/portfolio/sapcad_details_portfolio.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                    <img src="assets/img/mk-sapcad-reg-emp.png" alt="" class="img-fluid" >
                   </a>
                 </figure>
               </div>
               <div class="tab-pane" id="alistar">
                 <figure>
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                  <a href="assets/img/portfolio/alistar_details_portfolio.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                     <img src="assets/img/mk-alistar.png" alt="" class="img-fluid">
                   </a>
                 </figure>
               </div>
               <div class="tab-pane" id="integra">
                 <figure>
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                  <a href="assets/img/portfolio/integra_details_portfolio.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                     <img src="assets/img/mk-integra.png" alt="" class="img-fluid">
                   </a>
                 </figure>
               </div>
               <div class="tab-pane" id="biblioteca">
                 <figure>
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                  <a href="assets/img/portfolio/biblioteca_details_portfolio.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                     <img src="assets/img/mk-biblioteca.png" alt="" class="img-fluid">
                   </a>
                 </figure>
